Commiting SASS que finalmente implemente al completo

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,8 +5,7 @@
 3-CLASS                     .   <p class="miClase">
 4-SELECTOR/ETIQUETA
 */
-/* formato de documento en general */
-estoy intentando solucionar el foter en austrohungria body {
+body {
   margin: 0;
   font-family: Helvetica, sans-serif;
   background-color: rgb(224, 224, 224);
@@ -32,63 +31,8 @@ a {
   text-decoration: none;
 }
 
-/* Header y Navbar */
-#header {
-  background-color: #b9b4b4;
-  display: flex;
-  width: 100%;
-  max-width: 1920px;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  flex-shrink: 0;
-}
-
-#Logo_En_NavBar {
-  width: 50px;
-  height: 50px;
-}
-
-#Tablero_NavBar {
-  width: 485px;
-  height: 140px;
-}
-
-#navBar {
-  display: flex;
-  height: 140px;
-  flex: 1;
-  width: 100%;
-  max-width: 1920px;
-  height: 100%;
-  align-items: center;
-  justify-content: space-around;
-  max-width: inherit; /*hace que herede el max ancho de header*/
-}
-
-#navBar ul li a {
-  display: inline-block;
-  margin: 0 15px;
-  text-decoration: none;
-  color: white;
-  padding: 8px 15px;
-  transition: background-color 0.3s;
-}
-
-#navBar ul li a:hover {
-  background-color: #02f7ff;
-  border-radius: 10px;
-}
-
 .img_logo {
   height: 30px;
-}
-
-/*La parte grande de la movida esta*/
-.main-hub-hist {
-  padding-top: 160px;
-  max-width: 1920px;
-  margin: 0 auto;
 }
 
 #main {
@@ -116,56 +60,6 @@ a {
 .image-aushunpiu img {
   max-width: 100%; /* La imagen no se expandira mas alla del 50% de su contenedor */
   height: auto; /* Mantiene las proporciones de la imagen */
-}
-
-/* Footer */
-#footer {
-  color: rgb(255, 255, 255);
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  text-decoration: none;
-  width: 100%;
-  max-width: 1920px;
-  height: 100px;
-  background-color: #797968;
-}
-
-margin-top .footer_redes a {
-  color: rgb(255, 255, 255);
-  display: inline-block;
-  margin: 20px 40px;
-  width: 60px;
-  height: 60px;
-  font-size: 80px;
-  align-items: center;
-  padding: 15px;
-  border-radius: 10px; /*radio de esquinas*/
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.footer_redes a:visited {
-  color: rgb(255, 255, 255);
-}
-
-.footer_redes a:hover {
-  transform: scale(1.2);
-  background-color: #02f7ff;
-  border-radius: 4px;
-}
-
-#footer ul li a {
-  display: inline-block;
-  margin: 0 15px;
-  text-decoration: none;
-  color: white;
-  width: 50px;
-  height: 50px;
-}
-
-.footer li a {
-  max-width: 40px;
-  height: 40px;
 }
 
 /*# sourceMappingURL=style.css.map */
